idea/testData/checkerWithErrorTypes/quick/regression/Jet72.jet
// JET-72 Type inference doesn't work when iterating over ArrayList

import <!UNRESOLVED_REFERENCE!>java<!>.util.ArrayList

abstract class Item(val room: <!UNRESOLVED_REFERENCE!>Object<!>) {
   abstract val name : String
}

val items: <!UNRESOLVED_REFERENCE!>ArrayList<!><Item> = <!UNRESOLVED_REFERENCE!>ArrayList<!><Item>

fun test(room : <!UNRESOLVED_REFERENCE!>Object<!>) {
  for(val item: Item in items) {
    if (item.room === room) {
      <!UNRESOLVED_REFERENCE!>System<!>.out<!UNNECESSARY_SAFE_CALL!>?.<!>println("You see " + item.name)
    }
  }
}